tests/baselines/reference/emitRestParametersFunctionProperty(strict=true).errors.txt
emitRestParametersFunctionProperty.ts(2,13): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersFunctionProperty.ts(6,10): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.


==== emitRestParametersFunctionProperty.ts (2 errors) ====
    var obj: {
        func1: (...rest) => void
                ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }
    
    var obj2 = {
        func(...rest) { }
             ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }